--- a/src/oldconfig.ini
+++ b/src/oldconfig.ini
@@ -15,15 +15,15 @@ filtered_level2 = 2500
 filtered_level3 = 4000
 
 [AUDIO]
-buffer_size = 1024
+buffer_size = 2048
 source = FILES
 output_channels = BOTH
-mic_time = 30
-ambient = ON
+mic_time = 15
+ambient = OFF
 
 [PROP]
-prop_trigger = PIR
-delay = 10
+prop_trigger = TIMER
+delay = 15
 eyes = ON
 trigger_out = ON
 
