Fixed problem with reversing direction for some servos. Also added test tone audio file.

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,12 +1,12 @@
 [SERVO]
 servo_min = 1050
 servo_max = 1250
-min_angle = 90
-max_angle = 0
+min_angle = 0
+max_angle = 90
 
 [CONTROLLER]
 style = 1
-threshold = 2500
+threshold = 2000
 level1 = 1500
 level2 = 2500
 level3 = 3500
@@ -19,10 +19,10 @@ buffer_size = 4096
 source = FILES
 output_channels = BOTH
 mic_time = 15
-ambient = ON
+ambient = OFF
 
 [PROP]
-prop_trigger = PIR
+prop_trigger = TIMER
 delay = 5
 eyes = ON
 trigger_out = ON
